--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@ body  {
 		<input type="submit" class="btn-info" value="Submit">
 		
 	</form>
-	<div class="my_prediction, output">
+	<div class="my_prediction, output"
 	{% if prediction == 1%}
 	<h1 style="color:#008000;"><strong>Positive</strong></h1>
 	<span style='font-size:100px;'>&#128522;</span>
