--- a/templates/home.html
+++ b/templates/home.html
@@ -39,30 +39,30 @@ body  {
 		<input type="submit" class="btn-info" value="Submit">
 		
 	</form>
-	<div class="my_prediction, output"
+	<div class="my_prediction">
 	     
 	{% if prediction == 1%}
 	<h1 style="color:#008000;"><strong>Positive</strong></h1>
 	<span style='font-size:100px;'>&#128522;</span>
         <br/>
-    	    {% if summary != ""%}
+<!--     	    {% if summary != ""%}
              <p1 style="color:#DC143C;"><strong>This review talks about....</strong></p1>
              <br/>
              <p1 style="color:#FA8072;">{{summary}}</p1>
              <span style='font-size:20px;'></span>
-      	     {% endif %}
+      	     {% endif %} -->
     
     
 	{% elif prediction == 0%}
 	<h1 style="color:#008000;"><strong>Negative</strong></h1>
 	<span style='font-size:100px;'>&#128543;</span>
         <br/>
-    	    {% if summary != ""%}
+<!--     	    {% if summary != ""%}
              <p1 style="color:#DC143C;"><strong>This review talks about....</strong></p1>
              <br/>
              <p1 style="color:#FA8072;">{{summary}}</p1>
              <span style='font-size:20px;'></span>
-      	     {% endif %}
+      	     {% endif %} -->
 	
     
 	{% elif prediction == 3%}
